Tue Jan 06 10:29:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* TODO: updated
	* include/cspublic.h: fix for C++ compile

Mon Jan  5 21:35:58 EST 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in new candidate 0.62rc3
	* src/dblib/bcp.c
	- Applied ML patch from Christos.  Added/fixed other comments.

Mon Jan  5 17:19:54 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/api_status.txt SQLFetchScroll is not OK.  

Mon Jan  5 10:09:30 EST 2004	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/index.html doc/htdoc/news.html
	- small repairs

Mon Jan  5 00:45:00 EST 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in set to 0.62rc2
	* doc/htdoc/index.html doc/htdoc/news.html
	- announce 0.62 release candidate availability
	* src/dblib/bcp.c src/tds/write.c
	- completed patch from Christos for native bcp null handling

Sat Jan 03 20:31:52 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* vms/config_h.vms vms/configure.com vms/descrip_mms.template:
	- applied Craig A. Berry patch for VMS

Fri Jan 02 11:16:59 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* win32/config.h:
	- removed developing define
	- updates some define

Fri Jan 02 10:49:35 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/pool/Makefile.am:
	- fixed double inclusion of symbols (Mac OS X should now compile
	  without patch, tested 10.2 version)

Fri Jan 02 09:21:49 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: optimize a bit
	* doc/Makefile.am: use $(MAKE) to call make
	* src/tds/unittests/Makefile.am src/tds/unittests/convert.c:
	- patch from Craig A. Berry for VMS

Wed Dec 31 14:38:41 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* doc/Makefile.am: some shell do not like '^' in arguments
	* doc/txt2man: fix gawk problems if utf8 is enabled

Wed Dec 31 12:32:46 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h include/tdsstring.h src/tds/tdsstring.c:
	- make DSTR more compiler-alike
