@@ -1,3 +1,7 @@
+Tue Jan  6 20:13:21 EST 2004	nsc <Nicholas_Castellano@acml.com>
+	* src/tds/unittests/convert.c:
+	- Don't divide by zero if test takes less than a millisecond.
+	
 Tue Jan 06 10:29:25 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* TODO: updated
 	* include/cspublic.h: fix for C++ compile
